# kz80_ml

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: factorial.ml  fibonacci.ml  invoice.ml  let_in.ml  match.ml  tuple_basic.ml  tuple_three.ml  tuple_wildcard.ml
repl/: DESIGN.md
src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs  types.rs
tests/: integration_tests.rs
tests/ml/: run_tests.sh  test_abs.ml  test_add.ml  test_closure_multiple.ml  test_closure_multiplier.ml  test_closure_simple.ml  test_cmp_eq.ml  test_cmp_ge.ml  test_cmp_gt.ml  test_cmp_le.ml  test_cmp_lt_false.ml  test_cmp_lt_true.ml  test_complex_expr.ml  test_div.ml  test_fn_compose.ml  test_fn_let_lambda.ml  test_fn_let_lambda2.ml  test_fn_pass_arg.ml  test_fn_pass_lambda.ml  test_fn_twice.ml  test_function_composition.ml  test_function_simple.ml  test_function_two_args.ml  test_guard_negative.ml  test_guard_positive.ml  test_guard_zero.ml  test_lambda_complex.ml  test_lambda_multiply.ml  test_lambda_nested.ml  test_lambda_simple.ml  test_lambda_two_args.ml  test_let_binding.ml  test_let_in.ml  test_let_multiple.ml  test_max.ml  test_min.ml  test_mod.ml  test_mul.ml  test_negative.ml  test_nested_if.ml  (+19 more)
